// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="sc-fYxtnH jTGySx"
>
  <div
    className="sc-tilXH iQjqJm"
    color="#38A9DB"
  />
  <span
    className="sc-hEsumM kgGVm"
  >
    Chart Legend
  </span>
</div>
`;

exports[`renders correctly with dashed prop 1`] = `
<div
  className="sc-fYxtnH jTGySx"
>
  <div
    className="sc-tilXH hgxgIL"
    color="#38A9DB"
  />
  <span
    className="sc-hEsumM kgGVm"
  >
    Chart Legend
  </span>
</div>
`;
